dev/TA_test/test_programs/typing_invalid/group5/redeclare_of_formal_param_in_func.go

package main

func main(){

	f(2)
}

func f(f int){
	// error: f redeclared in this block
	var f bool
	f = true;
}
